--- a/blocks/hero-heritage-cc/hero-heritage-cc.css
+++ b/blocks/hero-heritage-cc/hero-heritage-cc.css
@@ -48,7 +48,7 @@
 .hero-heritage-cc-container .hero-heritage-cc-wrapper {
   position: relative;
   max-width: unset;
-  padding: 0;
+  padding: var(--nav-height) 0 0;
   height: 100vh;
   height: 100dvh;
   min-height: 100vh;
@@ -188,7 +188,7 @@
 
 .hero-heritage-cc-intro > div {
   position: relative;
-  padding-top: var(--spacing-xxl);
+
   z-index: 2;
   display: flex;
   flex-direction: column;
