added missing margin to Mayura banner

--- a/blocks/hero-heritage-cc/hero-heritage-cc.css
+++ b/blocks/hero-heritage-cc/hero-heritage-cc.css
@@ -505,6 +505,7 @@
   width: 100%;
   max-width: 1200px;
   height: 100%;
+  margin: auto;
 }
 
 .hero-heritage-cc-header-cta-link .icon-arrow-right-white {
